Fix modal window margins.

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-contacts-wrapper">
           <a class="logo link" href="./index.html"
             >Web<span class="footer-logo-word">Studio</span></a
           >
@@ -473,15 +473,13 @@
               </svg>
             </span>
           </label>
-          <label class="modal-label">
+          <label class="modal-comment-label">
             <span class="modal-form-desc">Коментар</span>
-            <span class="modal-form-wrapper">
-              <textarea
-                name="user_comment"
-                placeholder="Введіть текст"
-                class="comment-modal"
-              ></textarea>
-            </span>
+            <textarea
+              name="user_comment"
+              placeholder="Введіть текст"
+              class="comment-modal"
+            ></textarea>
           </label>
           <input
             id="user-policy"
