--- a/portfolio.html
+++ b/portfolio.html
@@ -233,13 +233,20 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container footer-container">
-        <div>
-          <a class="logo link" href="./index.html">Web<span class="footer-logo-word">Studio</span></a>
+        <div class="footer-contacts-wrapper">
+          <a class="logo link" href="./index.html"
+            >Web<span class="footer-logo-word">Studio</span></a
+          >
           <address class="address">
             <ul class="adress-list list">
               <li class="address-list-item">
-                <a class="address-link link" href="https://goo.gl/maps/UFjsu3jXrwAWiCtK9" target="_blank"
-                  rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                <a
+                  class="address-link link"
+                  href="https://goo.gl/maps/UFjsu3jXrwAWiCtK9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
               </li>
               <li class="address-list-item">
                 <a class="footer-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
